Fix for pricing page alignment

--- a/src/pages/AboutPage/AboutPage.css
+++ b/src/pages/AboutPage/AboutPage.css
@@ -1,7 +1,8 @@
-.container {
+.about-page-container .container {
     display: flex;
     align-items: center;
   }
+  
   
   .icon-text-container {
     display: flex;
@@ -25,4 +26,3 @@
       margin-bottom: 20px;
     }
   }
-  
